--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <h1>Pong Game</h1>
+    <h1>Score: <span>0</span></h1>
     <!-- Create your canvas element here -->
-
+    <canvas id="my-canvas"></canvas>
     <!-- Link your js file here -->
+    <script src="script.js"></script>
 
 </body>
 </html>
